Some Changes made

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,8 @@
       <label for="email">Email Address</label>
       <input type="email" id="email" placeholder="Enter your email">
     </div>
-    <button class="btn" onclick="signIn()">Sign In</button>
-    <div class="signin-footer">Already a member?</div>
+    <button class="btn" onclick="signIn()">Sign Up</button>
+    <div class="signin-footer">Already a member? <style color="blue">Sign In</style> </div>
   </section>
 
   <!-- Booking Form Section -->
