--- a/public/index.html
+++ b/public/index.html
@@ -1,117 +1,195 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Retiring Room Booking</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AAI Retiring Room</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- Header -->
+  <nav class="navbar navbar-expand-lg" style="background-color: #003366;"></nav>
 
-  <!-- Header (Empty per your request) -->
-  <header></header>
-
-  <!-- Centered Logo & Title -->
-  <div class="logo-section">
-    
-    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e0/Airports_Authority_of_India_logo.svg/2560px-Airports_Authority_of_India_logo.svg.png" alt="AAI Logo">
-    <div class="logo-title">AAI Retiring Room</div>
-    <hr style="width: 300px; margin: 10px auto; border: 1px solid #003366;">
-
+  <!-- Logo and Title -->
+  <div class="container mt-4 text-center">
+    <img
+      src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e0/Airports_Authority_of_India_logo.svg/1200px-Airports_Authority_of_India_logo.svg.png"
+      alt="AAI Logo"
+      class="img-fluid"
+      style="max-height: 120px;"
+    />
+    <h1 class="text-black fw-bold mt-2">AAI RETIRING ROOM</h1>
   </div>
 
-  <!-- Welcome Box -->
-  <div id="welcomeBox"></div>
+  <div class="container mt-4">
+    <!-- Sign In Section -->
+    <div id="signInSection" class="card p-4 mb-4 border-primary">
+      <h4>Sign In</h4>
 
-  <!-- Sign In Section -->
-  <section id="signInSection">
-    <h2>Sign In</h2>
-    <div class="form-group">
       <label for="fullname">Full Name</label>
-      <input type="text" id="fullname" placeholder="Enter your full name">
-    </div>
-    <div class="form-group">
+      <input type="text" id="fullname" class="form-control mb-2"
+             placeholder="Enter your full name"
+             pattern="[A-Za-z ]{1,50}"
+             title="Only letters and spaces allowed" required />
+
       <label for="mobile">Mobile Number</label>
-      <input type="text" id="mobile" placeholder="Enter your mobile number">
-    </div>
-    <div class="form-group">
-      <label for="email">Email Address</label>
-      <input type="email" id="email" placeholder="Enter your email">
-    </div>
-    <button class="btn" onclick="signIn()">Sign Up</button>
-    <div class="signin-footer">Already a member? <style color="blue">Sign In</style> </div>
-  </section>
+      <div class="input-group mb-2">
+        <span class="input-group-text">+91</span>
+        <input type="tel" id="mobile" class="form-control"
+               placeholder="10-digit mobile number"
+               pattern="[0-9]{10}" maxlength="10"
+               inputmode="numeric"
+               title="Enter a valid 10-digit mobile number" required />
+      </div>
 
-  <!-- Booking Form Section -->
-  <div id="booking-sections">
-    <!-- Booking Details -->
-    <section>
-      <h2>Enter Booking Details</h2>
-      <div class="form-group">
-        <label for="arrival">Arrival Flight No.</label>
-        <input type="text" id="arrival" placeholder="e.g. AI 763">
-      </div>
-      <div class="form-group">
-        <label for="departure">Departure Flight No.</label>
-        <input type="text" id="departure" placeholder="e.g. AI 764">
-      </div>
-      <div class="form-group">
-        <label for="checkin">Check-in Date</label>
-        <input type="date" id="checkin">
-      </div>
-      <div class="form-group">
-        <label for="checkout">Check-out Date</label>
-        <input type="date" id="checkout">
-      </div>
-      <div class="form-group">
-        <label for="roomType">Select Room Type</label>
-        <select id="roomType" onchange="updateAmount()">
-          <option value="">-- Select Room Type --</option>
-          <option value="1">Room Type 1 (₹700/hr)</option>
-          <option value="2">Room Type 2 (₹1000/hr)</option>
-          <option value="3">Room Type 3 (₹1500/hr)</option>
-        </select>
-      </div>
-    </section>
+      <label for="email">Email</label>
+      <input type="email" id="email" class="form-control mb-2"
+             placeholder="Enter your email"
+             title="Must include @ symbol" required />
 
-    <!-- Time & Price -->
-    <section>
-      <h2>Time Chosen & Pricing</h2>
-      <div class="form-group">
-        <label for="startHour">Start Hour</label>
-        <select id="startHour" onchange="updateAmount()"></select>
+      <button onclick="signIn()" class="btn btn-primary">Sign In</button>
+    </div>
+
+   <div id="booking-sections" style="display: none;">
+  <div class="card p-4 mb-4 border-2 border-primary shadow">
+    <h4 class="text-primary fw-bold">Booking Information</h4>
+
+    <div class="mb-3">
+      <label for="arrival" class="form-label fw-semibold">Arrival Flight No.</label>
+      <input type="text" id="arrival" class="form-control border-primary" placeholder="Enter Arrival Flight No." />
+    </div>
+
+    <div class="mb-3">
+      <label for="departure" class="form-label fw-semibold">Departure Flight No.</label>
+      <input type="text" id="departure" class="form-control border-primary" placeholder="Enter Departure Flight No." />
+    </div>
+
+    <div class="mb-3">
+      <label for="pnr" class="form-label fw-semibold">PNR Number</label>
+      <input type="text" id="pnr" class="form-control border-primary" placeholder="Enter PNR Number" maxlength="10" pattern="[A-Za-z0-9]{6,10}" title="6–10 characters, letters & numbers only" />
+    </div>
+
+    <div class="mb-3">
+      <label for="checkin" class="form-label fw-semibold">Check-in Date</label>
+      <input type="date" id="checkin" class="form-control border-primary" />
+    </div>
+
+    <div class="mb-3">
+      <label for="checkout" class="form-label fw-semibold">Check-out Date</label>
+      <input type="date" id="checkout" class="form-control border-primary" />
+    </div>
+
+    <div class="mb-3">
+      <label for="roomType" class="form-label fw-semibold">Room Type</label>
+      <select id="roomType" class="form-select border-primary" onchange="updateAmount()">
+        <option value="">Select</option>
+        <option value="1">Room Type 1 (₹700/hr)</option>
+        <option value="2">Room Type 2 (₹1000/hr)</option>
+        <option value="3">Room Type 3 (₹1500/hr)</option>
+      </select>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6 mb-3">
+        <label for="startHour" class="form-label fw-semibold">Start Hour</label>
+        <select id="startHour" class="form-select border-primary" onchange="updateAmount()"></select>
       </div>
-      <div class="form-group">
-        <label for="endHour">End Hour</label>
-        <select id="endHour" onchange="updateAmount()"></select>
+
+      <div class="col-md-6 mb-3">
+        <label for="endHour" class="form-label fw-semibold">End Hour</label>
+        <select id="endHour" class="form-select border-primary" onchange="updateAmount()"></select>
       </div>
-      <div class="form-group">
-        <label>Total Amount (Excl. GST):</label>
-        <div id="totalAmount">₹0</div>
-      </div>
-      <button class="btn" onclick="showSummary()">Book Now</button>
-    </section>
+    </div>
+
+    <h5 class="mt-3 fw-bold">Total Amount: <span id="totalAmount" class="text-primary">₹0</span></h5>
+
+    <button class="btn btn-primary mt-3 px-4" onclick="showSummary()">Book Now</button>
+  </div>
+</div>
 
     <!-- Booking Summary -->
-    <section id="summarySection" style="display:none;">
-      <h2>Booking Summary</h2>
-      <div class="form-group"><strong>Full Name:</strong> <span id="summaryName"></span></div>
-      <div class="form-group"><strong>Mobile:</strong> <span id="summaryMobile"></span></div>
-      <div class="form-group"><strong>Email:</strong> <span id="summaryEmail"></span></div>
-      <div class="form-group"><strong>Arrival Flight:</strong> <span id="summaryArrival"></span></div>
-      <div class="form-group"><strong>Departure Flight:</strong> <span id="summaryDeparture"></span></div>
-      <div class="form-group"><strong>Check-in Date:</strong> <span id="summaryCheckin"></span></div>
-      <div class="form-group"><strong>Check-out Date:</strong> <span id="summaryCheckout"></span></div>
-      <div class="form-group"><strong>Room Type:</strong> <span id="summaryRoomType"></span></div>
-      <div class="form-group"><strong>Start Hour:</strong> <span id="summaryStart"></span></div>
-      <div class="form-group"><strong>End Hour:</strong> <span id="summaryEnd"></span></div>
-      <div class="form-group">
-        <strong>Amount (Excl. GST):</strong> ₹<span id="amountExcl"></span><br>
-        <strong>GST (18%):</strong> ₹<span id="gstAmount"></span><br>
-        <strong>Total Amount:</strong> ₹<span id="totalWithGst"></span>
+    <div id="summarySection" class="card p-4 border-dark mt-4" style="display: none;">
+      <h4 class="mb-3">Booking Summary</h4>
+      <table class="table table-bordered">
+        <tbody>
+          <tr><th>Name</th><td id="summaryName"></td></tr>
+          <tr><th>Mobile</th><td id="summaryMobile"></td></tr>
+          <tr><th>Email</th><td id="summaryEmail"></td></tr>
+          <tr><th>Arrival Flight No.</th><td id="summaryArrival"></td></tr>
+          <tr><th>Departure Flight No.</th><td id="summaryDeparture"></td></tr>
+          <tr><th>Check-in Date</th><td id="summaryCheckin"></td></tr>
+          <tr><th>Check-out Date</th><td id="summaryCheckout"></td></tr>
+          <tr><th>Room Type</th><td id="summaryRoomType"></td></tr>
+          <tr><th>Start Time</th><td id="summaryStart"></td></tr>
+          <tr><th>End Time</th><td id="summaryEnd"></td></tr>
+          <tr><th>Amount (Excl. GST)</th><td>₹<span id="amountExcl"></span></td></tr>
+          <tr><th>GST (18%)</th><td>₹<span id="gstAmount"></span></td></tr>
+          <tr><th>Total Amount</th><td>₹<span id="totalWithGst"></span></td></tr>
+        </tbody>
+      </table>
+
+      <!-- Terms & Pay -->
+      <div class="form-check mt-3">
+        <input class="form-check-input" type="checkbox" id="termsCheckbox" onchange="togglePayButton()" />
+        <label class="form-check-label text-dark" for="termsCheckbox">
+          I accept all <a href="#" data-bs-toggle="modal" data-bs-target="#termsModal">Terms and Conditions</a> and I confirm my payment.
+        </label>
       </div>
-    </section>
+
+      <button class="btn btn-primary mt-3" id="payButton" disabled onclick="redirectToPayment()">Pay Now</button>
+
+    </div>
   </div>
 
-  <script src="./script.js"></script>
+  <!-- Terms and Conditions Modal -->
+  <div class="modal fade" id="termsModal" tabindex="-1" aria-labelledby="termsModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header bg-primary text-white">
+          <h5 class="modal-title" id="termsModalLabel">Terms and Conditions</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body text-start">
+          <ul>
+            <li>All bookings are prepaid and non-refundable once confirmed.</li>
+            <li>You must report to the retiring room within 30 minutes of your slot start time.</li>
+            <li>Carry a valid ID proof at the time of check-in.</li>
+            <li>Consumption of alcohol, smoking, or any illegal activity is strictly prohibited.</li>
+            <li>Additional charges will apply for overstaying beyond the booked duration.</li>
+            <li>In case of property damage, the user will be liable for penalties.</li>
+            <li>The management holds the right to deny check-in for any misconduct or violation of rules.</li>
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
+  <!-- Confirmation Modal -->
+<div class="modal fade" id="confirmationModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content p-4">
+      <h5 class="modal-title text-success fw-bold">Booking Confirmed ✅</h5>
+      <div class="modal-body">
+        <p><strong>Booking No:</strong> <span id="modalBookingNo"></span></p>
+        <p><strong>Name:</strong> <span id="modalName"></span></p>
+        <p><strong>Email:</strong> <span id="modalEmail"></span></p>
+        <div class="text-center">
+          <img id="qrCode" src="" alt="QR Code" class="img-fluid mt-3" style="max-width: 150px;">
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
