--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css" />
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AAI Retiring Room</title>
+
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+
+  <!-- Custom CSS -->
+  <style>
+    body {
+      background-image: url('https://scontent.fccu10-1.fna.fbcdn.net/v/t39.30808-6/316819291_509519751216831_1808280396182407442_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=d0ztdZLpZuIQ7kNvwHiDYD8&_nc_oc=AdmyVhHRraRK9cAaAIXyz9Q78n_d0mUh2wU7-haByMUDpX3sAbNFypbbTFEpHZodQZs&_nc_zt=23&_nc_ht=scontent.fccu10-1.fna&_nc_gid=ukL3n6dFqkQ2_jSnlP2AsQ&oh=00_AfO_LoDT2EZA-3fP57ZmXntSfmXKmN9RYOv36Abwe4Z-fA&oe=6857A790');
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f7fa;
+    }
+
+    .card {
+      border-radius: 12px;
+      background-color: rgba(255, 255, 255, 0.95);
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      font-family: 'Georgia', serif;
+    }
+
+    label {
+      color: #003366;
+    }
+
+    #summarySection {
+      border: 2px solid #000;
+      background-color: #fff;
+    }
+
+    table th {
+      width: 40%;
+    }
+
+    #payButton {
+      background-color: #004aad;
+      border-color: #004aad;
+    }
+  </style>
 </head>
 <body>
-  <!-- Header -->
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg" style="background-color: #003366;"></nav>
 
   <!-- Logo and Title -->
@@ -24,89 +68,92 @@
 
   <div class="container mt-4">
     <!-- Sign In Section -->
-    <div id="signInSection" class="card p-4 mb-4 border-primary">
-      <h4>Sign In</h4>
+    <div class="mx-auto" style="max-width: 500px;">
+      <div id="signInSection" class="card p-4 mb-4 border-primary">
+        <h4 class="fw-bold text-primary mb-3">Sign In</h4>
 
-      <label for="fullname">Full Name</label>
-      <input type="text" id="fullname" class="form-control mb-2"
-             placeholder="Enter your full name"
-             pattern="[A-Za-z ]{1,50}"
-             title="Only letters and spaces allowed" required />
+        <label for="fullname" class="form-label">Full Name</label>
+        <input type="text" id="fullname" class="form-control mb-2"
+               placeholder="Enter your full name"
+               pattern="[A-Za-z ]{1,50}"
+               title="Only letters and spaces allowed" required />
 
-      <label for="mobile">Mobile Number</label>
-      <div class="input-group mb-2">
-        <span class="input-group-text">+91</span>
-        <input type="tel" id="mobile" class="form-control"
-               placeholder="10-digit mobile number"
-               pattern="[0-9]{10}" maxlength="10"
-               inputmode="numeric"
-               title="Enter a valid 10-digit mobile number" required />
-      </div>
+        <label for="mobile" class="form-label">Mobile Number</label>
+        <div class="input-group mb-2">
+          <span class="input-group-text">+91</span>
+          <input type="tel" id="mobile" class="form-control"
+                 placeholder="10-digit mobile number"
+                 pattern="[0-9]{10}" maxlength="10"
+                 inputmode="numeric"
+                 title="Enter a valid 10-digit mobile number" required />
+        </div>
 
-      <label for="email">Email</label>
-      <input type="email" id="email" class="form-control mb-2"
-             placeholder="Enter your email"
-             title="Must include @ symbol" required />
+        <label for="email" class="form-label">Email</label>
+        <input type="email" id="email" class="form-control mb-2"
+               placeholder="Enter your email"
+               title="Must include @ symbol" required />
 
-      <button onclick="signIn()" class="btn btn-primary">Sign In</button>
-    </div>
-
-   <div id="booking-sections" style="display: none;">
-  <div class="card p-4 mb-4 border-2 border-primary shadow">
-    <h4 class="text-primary fw-bold">Booking Information</h4>
-
-    <div class="mb-3">
-      <label for="arrival" class="form-label fw-semibold">Arrival Flight No.</label>
-      <input type="text" id="arrival" class="form-control border-primary" placeholder="Enter Arrival Flight No." />
-    </div>
-
-    <div class="mb-3">
-      <label for="departure" class="form-label fw-semibold">Departure Flight No.</label>
-      <input type="text" id="departure" class="form-control border-primary" placeholder="Enter Departure Flight No." />
-    </div>
-
-    <div class="mb-3">
-      <label for="pnr" class="form-label fw-semibold">PNR Number</label>
-      <input type="text" id="pnr" class="form-control border-primary" placeholder="Enter PNR Number" maxlength="10" pattern="[A-Za-z0-9]{6,10}" title="6–10 characters, letters & numbers only" />
-    </div>
-
-    <div class="mb-3">
-      <label for="checkin" class="form-label fw-semibold">Check-in Date</label>
-      <input type="date" id="checkin" class="form-control border-primary" />
-    </div>
-
-    <div class="mb-3">
-      <label for="checkout" class="form-label fw-semibold">Check-out Date</label>
-      <input type="date" id="checkout" class="form-control border-primary" />
-    </div>
-
-    <div class="mb-3">
-      <label for="roomType" class="form-label fw-semibold">Room Type</label>
-      <select id="roomType" class="form-select border-primary" onchange="updateAmount()">
-        <option value="">Select</option>
-        <option value="1">Room Type 1 (₹700/hr)</option>
-        <option value="2">Room Type 2 (₹1000/hr)</option>
-        <option value="3">Room Type 3 (₹1500/hr)</option>
-      </select>
-    </div>
-
-    <div class="row">
-      <div class="col-md-6 mb-3">
-        <label for="startHour" class="form-label fw-semibold">Start Hour</label>
-        <select id="startHour" class="form-select border-primary" onchange="updateAmount()"></select>
-      </div>
-
-      <div class="col-md-6 mb-3">
-        <label for="endHour" class="form-label fw-semibold">End Hour</label>
-        <select id="endHour" class="form-select border-primary" onchange="updateAmount()"></select>
+        <button onclick="signIn()" class="btn btn-primary mt-2 w-100">Sign In</button>
       </div>
     </div>
 
-    <h5 class="mt-3 fw-bold">Total Amount: <span id="totalAmount" class="text-primary">₹0</span></h5>
+    <!-- Booking Section -->
+    <div id="booking-sections" style="display: none;">
+      <div class="card p-4 mb-4 border-2 border-primary shadow">
+        <h4 class="text-primary fw-bold">Booking Information</h4>
 
-    <button class="btn btn-primary mt-3 px-4" onclick="showSummary()">Book Now</button>
-  </div>
-</div>
+        <div class="mb-3">
+          <label for="arrival" class="form-label fw-semibold">Arrival Flight No.</label>
+          <input type="text" id="arrival" class="form-control border-primary" placeholder="Enter Arrival Flight No." />
+        </div>
+
+        <div class="mb-3">
+          <label for="departure" class="form-label fw-semibold">Departure Flight No.</label>
+          <input type="text" id="departure" class="form-control border-primary" placeholder="Enter Departure Flight No." />
+        </div>
+
+        <div class="mb-3">
+          <label for="pnr" class="form-label fw-semibold">PNR Number</label>
+          <input type="text" id="pnr" class="form-control border-primary" placeholder="Enter PNR Number" maxlength="10" pattern="[A-Za-z0-9]{6,10}" title="6–10 characters, letters & numbers only" />
+        </div>
+
+        <div class="mb-3">
+          <label for="checkin" class="form-label fw-semibold">Check-in Date</label>
+          <input type="date" id="checkin" class="form-control border-primary" />
+        </div>
+
+        <div class="mb-3">
+          <label for="checkout" class="form-label fw-semibold">Check-out Date</label>
+          <input type="date" id="checkout" class="form-control border-primary" />
+        </div>
+
+        <div class="mb-3">
+          <label for="roomType" class="form-label fw-semibold">Room Type</label>
+          <select id="roomType" class="form-select border-primary" onchange="updateAmount()">
+            <option value="">Select</option>
+            <option value="1">Room Type 1 (₹700/hr)</option>
+            <option value="2">Room Type 2 (₹1000/hr)</option>
+            <option value="3">Room Type 3 (₹1500/hr)</option>
+          </select>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <label for="startHour" class="form-label fw-semibold">Start Hour</label>
+            <select id="startHour" class="form-select border-primary" onchange="updateAmount()"></select>
+          </div>
+
+          <div class="col-md-6 mb-3">
+            <label for="endHour" class="form-label fw-semibold">End Hour</label>
+            <select id="endHour" class="form-select border-primary" onchange="updateAmount()"></select>
+          </div>
+        </div>
+
+        <h5 class="mt-3 fw-bold">Total Amount: <span id="totalAmount" class="text-primary">₹0</span></h5>
+
+        <button class="btn btn-primary mt-3 px-4" onclick="showSummary()">Book Now</button>
+      </div>
+    </div>
 
     <!-- Booking Summary -->
     <div id="summarySection" class="card p-4 border-dark mt-4" style="display: none;">
@@ -138,11 +185,10 @@
       </div>
 
       <button class="btn btn-primary mt-3" id="payButton" disabled onclick="redirectToPayment()">Pay Now</button>
-
     </div>
   </div>
 
-  <!-- Terms and Conditions Modal -->
+  <!-- Terms Modal -->
   <div class="modal fade" id="termsModal" tabindex="-1" aria-labelledby="termsModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-scrollable">
       <div class="modal-content">
@@ -168,28 +214,28 @@
     </div>
   </div>
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script.js"></script>
   <!-- Confirmation Modal -->
-<div class="modal fade" id="confirmationModal" tabindex="-1" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content p-4">
-      <h5 class="modal-title text-success fw-bold">Booking Confirmed ✅</h5>
-      <div class="modal-body">
-        <p><strong>Booking No:</strong> <span id="modalBookingNo"></span></p>
-        <p><strong>Name:</strong> <span id="modalName"></span></p>
-        <p><strong>Email:</strong> <span id="modalEmail"></span></p>
-        <div class="text-center">
-          <img id="qrCode" src="" alt="QR Code" class="img-fluid mt-3" style="max-width: 150px;">
+  <div class="modal fade" id="confirmationModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content p-4">
+        <h5 class="modal-title text-success fw-bold">Booking Confirmed ✅</h5>
+        <div class="modal-body">
+          <p><strong>Booking No:</strong> <span id="modalBookingNo"></span></p>
+          <p><strong>Name:</strong> <span id="modalName"></span></p>
+          <p><strong>Email:</strong> <span id="modalEmail"></span></p>
+          <div class="text-center">
+            <img id="qrCode" src="" alt="QR Code" class="img-fluid mt-3" style="max-width: 150px;">
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+        <div class="modal-footer">
+          <button class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
+  <!-- JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
